# pnl

./: .gitignore  CMakeLists.txt  README.md
include/: account.hpp  accounting_method.hpp  pnl_calculator.hpp  portfolio.hpp  position.hpp  statistics.hpp  trade.hpp  types.hpp
src/: main.cpp  pnl_calculator.cpp  portfolio.cpp  strategies.cpp
src/strategies/: fifo.cpp  hifo_lofo.cpp  lifo.cpp  wac.cpp
tests/: single_ticker.csv
